# drf-examples

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt
app/: settings.py  urls.py
app/app/: settings.py
manifest/: application.yaml
user/: models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py
user/tests/: test_user_api.py
utils/: permissions.py
