[tool.poetry]
name = "drf-examples"
version = "0.1.0"
description = ""
authors = ["Mathias <mathias.scroccaro@gmail.com>"]
readme = "README.md"
packages = [{include = "drf_examples"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
